{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 222,
  "lineage": "42e6eb9d-e4ee-319a-0e49-ec3db29ffbab",
  "resources": [
    {
      "module": "module.webserver-cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:166373406634:vpc/vpc-01c56ed2b59508840",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-03b5d8b19a45006ce",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-00a2c7774078d3d16",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c56ed2b59508840",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09fad8b352acbe561",
            "owner_id": "166373406634",
            "region": "eu-west-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.webserver-cluster",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:loadbalancer/app/staging-lb/8432a26121ad2a9c",
            "arn_suffix": "app/staging-lb/8432a26121ad2a9c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "staging-lb-694075149.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:loadbalancer/app/staging-lb/8432a26121ad2a9c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "staging-lb",
            "preserve_host_header": false,
            "region": "eu-west-1",
            "security_groups": [
              "sg-09d2d641aaf385b1f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005f3250d37d9943d"
              },
              {
                "subnet_id": "subnet-0740377bf64a4bcce"
              },
              {
                "subnet_id": "subnet-0c5640c526f8f3697"
              }
            ],
            "subnets": [
              "subnet-005f3250d37d9943d",
              "subnet-0740377bf64a4bcce",
              "subnet-0c5640c526f8f3697"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-01c56ed2b59508840",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:loadbalancer/app/staging-lb/8432a26121ad2a9c"
          },
          "dependencies": [
            "module.webserver-cluster.aws_security_group.lb_sg",
            "module.webserver-cluster.data.aws_subnets.default",
            "module.webserver-cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-cluster",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:listener/app/staging-lb/8432a26121ad2a9c/fd7987745c04a1cf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404:page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:listener/app/staging-lb/8432a26121ad2a9c/fd7987745c04a1cf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:loadbalancer/app/staging-lb/8432a26121ad2a9c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:listener/app/staging-lb/8432a26121ad2a9c/fd7987745c04a1cf"
          },
          "dependencies": [
            "module.webserver-cluster.aws_lb.example",
            "module.webserver-cluster.aws_security_group.lb_sg",
            "module.webserver-cluster.data.aws_subnets.default",
            "module.webserver-cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-cluster",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:targetgroup/staging-terraform-asg-example/2e14df358713d1b5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:listener-rule/app/staging-lb/8432a26121ad2a9c/fd7987745c04a1cf/2521bbff1376f69b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:listener-rule/app/staging-lb/8432a26121ad2a9c/fd7987745c04a1cf/2521bbff1376f69b",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:listener/app/staging-lb/8432a26121ad2a9c/fd7987745c04a1cf",
            "priority": 100,
            "region": "eu-west-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:listener-rule/app/staging-lb/8432a26121ad2a9c/fd7987745c04a1cf/2521bbff1376f69b"
          },
          "dependencies": [
            "module.webserver-cluster.aws_lb.example",
            "module.webserver-cluster.aws_lb_listener.http",
            "module.webserver-cluster.aws_lb_target_group.asg",
            "module.webserver-cluster.aws_security_group.lb_sg",
            "module.webserver-cluster.data.aws_subnets.default",
            "module.webserver-cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-cluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:targetgroup/staging-terraform-asg-example/2e14df358713d1b5",
            "arn_suffix": "targetgroup/staging-terraform-asg-example/2e14df358713d1b5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:targetgroup/staging-terraform-asg-example/2e14df358713d1b5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "staging-terraform-asg-example",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01c56ed2b59508840"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:166373406634:targetgroup/staging-terraform-asg-example/2e14df358713d1b5"
          },
          "dependencies": [
            "module.webserver-cluster.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:166373406634:security-group/sg-01baf08c3ad946f9d",
            "description": "example",
            "egress": [],
            "id": "sg-01baf08c3ad946f9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "staging-example",
            "name_prefix": "",
            "owner_id": "166373406634",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c56ed2b59508840"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "166373406634",
            "id": "sg-01baf08c3ad946f9d",
            "region": "eu-west-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:166373406634:security-group/sg-09d2d641aaf385b1f",
            "description": "example",
            "egress": [],
            "id": "sg-09d2d641aaf385b1f",
            "ingress": [],
            "name": "staging-terraform-example-alb",
            "name_prefix": "",
            "owner_id": "166373406634",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c56ed2b59508840"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "166373406634",
            "id": "sg-09d2d641aaf385b1f",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "module": "module.webserver-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "this is the ingress rules for loadbalancers",
            "from_port": 0,
            "id": "sgrule-415750298",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-09d2d641aaf385b1f",
            "security_group_rule_id": "sgr-07efe71241d2ac9ea",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.webserver-cluster.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "this is the ingress rules for loadbalancers",
            "from_port": 80,
            "id": "sgrule-2610995244",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-09d2d641aaf385b1f",
            "security_group_rule_id": "sgr-0ee699668fa3edc9f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.webserver-cluster.aws_security_group.lb_sg"
          ]
        }
      ]
    }
  ]
}